discussion/kv_engine/181882/181882_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53980: Split the PagingVisitor into two separate visitors

This simplifies the logic in most cases, as it avoids the conditional
execution of code we had before.

Change-Id: I8036cf5ee2dc3a07b07290f226defb6874661052

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-26 15:47:03.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-26 16:21:55.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21507/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/paging_visitor.cc:302:9: error: use of undeclared identifier "isBelowLowWaterMark" [clang-diagnostic-error]
        isBelowLowWaterMark = true;
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21507/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21507/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50730/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/paging_visitor.cc(302): error C2065: "isBelowLowWaterMark": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50730/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42574/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42574/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/239/ : FAILURE

Compile error at [2022-10-26T16:15:05.695Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: ?isBelowLowWaterMark? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/239/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11237/ : FAILURE

Compile error at [2022-10-26T16:17:19.932Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11237/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22968/ : FAILURE

Compile error at [2022-10-26T15:51:18.993Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22968/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24780/ : FAILURE

Compile error at [2022-10-26T16:21:17.769Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24780/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23949/ : FAILURE

Compile error at [2022-10-26T16:20:40.764Z] ../kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: ?isBelowLowWaterMark? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23949/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23540/ : FAILURE

Compile error at [2022-10-26T16:19:42.153Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: ?isBelowLowWaterMark? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23540/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11328/ : FAILURE

Compile error at [2022-10-26T15:49:51.099Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: ?isBelowLowWaterMark? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11328/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31965/ : FAILURE

Compile error at [2022-10-26T16:21:15.085Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/paging_visitor.cc:302:9:
error: use of undeclared identifier "isBelowLowWaterMark"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31965/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20776/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
